--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     ]
   },
   "dependencies": {
+    "@fsouza/prettierd": "^0.26.2",
     "@redwoodjs/forms": "8.8.1",
     "@redwoodjs/router": "8.8.1",
     "@redwoodjs/web": "8.8.1",
