--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "devDependencies": {
     "@redwoodjs/auth-dbauth-setup": "8.8.1",
     "@redwoodjs/core": "8.8.1",
-    "@redwoodjs/project-config": "8.8.1"
+    "@redwoodjs/project-config": "8.8.1",
+    "prettier-plugin-tailwindcss": "^0.5.12"
   },
   "eslintConfig": {
     "extends": "@redwoodjs/eslint-config",
