--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,10 @@
   "devDependencies": {
     "@redwoodjs/vite": "8.8.1",
     "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19"
+    "@types/react-dom": "^18.2.19",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "postcss-loader": "^8.2.0",
+    "tailwindcss": "^3.4.17"
   }
 }
