--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@redwoodjs/auth-dbauth-setup": "8.8.1",
+    "@redwoodjs/cli-storybook-vite": "8.8.1",
     "@redwoodjs/core": "8.8.1",
     "@redwoodjs/project-config": "8.8.1",
     "prettier-plugin-tailwindcss": "^0.5.12"
