--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
   "packageManager": "yarn@4.6.0",
   "resolutions": {
     "@storybook/react-dom-shim@npm:7.6.20": "https://verdaccio.tobbe.dev/@storybook/react-dom-shim/-/react-dom-shim-8.0.8.tgz"
+  },
+  "dependencies": {
+    "@fsouza/prettierd": "^0.26.2"
   }
 }
