--- a/web/package.json
+++ b/web/package.json
@@ -22,11 +22,15 @@
   },
   "devDependencies": {
     "@redwoodjs/vite": "8.8.1",
+    "@tailwindcss/aspect-ratio": "0.4.2",
+    "@tailwindcss/forms": "0.5.6",
+    "@tailwindcss/line-clamp": "0.4.4",
+    "@tailwindcss/typography": "0.5.10",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "postcss-loader": "^8.2.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "3.3.3"
   }
 }
